# SPMod

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CompilerSetup.cmake  ISSUE_TEMPLATE.md  README.md  appveyor.yml  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
appveyor/: build.ps1  package.ps1
cmake/: BuildFMT.cmake  BuildLLVM.cmake  BuildSPVM.cmake  BuildYAML.cmake  BuildYAMLClang.cmake  BuildYAMLGCC.cmake  BuildYAMLMSVC.cmake  BuildYAMLUnix.cmake  CompilerSetup.cmake  DownloadAnubisSDK.cmake  InstallAMBuild.cmake
configs/gamedata/virtual/valve/: offsets.yml
exts/: meson.build
exts/example/: DummyPluginMngr.cpp  DummyPluginMngr.hpp  ext.cpp  ext.hpp  meson.build
exts/extmetatest/: ext.cpp  ext.hpp  meson.build
exts/exttest/: ext.hpp  meson.build
exts/sourcepawn/: CmdNatives.cpp  CoreNatives.cpp  DebugListener.cpp  ExtMain.cpp  ExtMain.hpp  ForwardListener.cpp  ForwardsNatives.cpp  IPluginSystem.hpp  Listeners.cpp  Listeners.hpp  LoggingSystem.cpp  LoggingSystem.hpp  MenuNatives.cpp  ModuleInterface.cpp  PluginSystem.cpp  PluginSystem.hpp  SourcePawnAPI.cpp  SourcePawnAPI.hpp  meson.build
exts/test/: ext.cpp  ext.hpp  h_export.cpp  meson.build
include/metamod/: plinfo.h
include/metamodcpp_sdk/: Common.hpp  IHelpers.hpp  IHookChains.hpp  IMetamod.hpp  IPlugin.hpp  StdFSWrapper.hpp
include/metamodcpp_sdk/engine/: Common.hpp  ICvar.hpp  IEdict.hpp  IEntVars.hpp  IGameClient.hpp  IHooks.hpp  IHudTextParams.hpp  ILibrary.hpp  ITraceResult.hpp
include/metamodcpp_sdk/game/: IBaseAnimating.hpp  IBaseDelay.hpp  IBaseEntity.hpp  IBaseMonster.hpp  IBasePlayer.hpp  IBaseToggle.hpp  IEntitiesHooks.hpp  IHooks.hpp  ILibrary.hpp
include/public/: Common.hpp  IAccessSystem.hpp  ICmdSystem.hpp  ICvarSystem.hpp  IEdict.hpp  IEngineFuncs.hpp  IForwardSystem.hpp  IHelpers.hpp  IHookChains.hpp  IHooks.hpp  IInterface.hpp  ILoggerSystem.hpp  IMenuSystem.hpp  IMessageSystem.hpp  IMetaFuncs.hpp  INativeProxy.hpp  INativeSystem.hpp  IPlayerSystem.hpp  IPlugin.hpp  IPluginMngr.hpp  IPluginSystem.hpp  IPyGlobal.hpp  ISPGlobal.hpp  ITimerSystem.hpp  IUtilsSystem.hpp  IVTableHookSystem.hpp  StandardHeaders.hpp
include/public/dlls/: IBaseAnimating.hpp  IBaseDelay.hpp  IBaseEntity.hpp  IBaseMonster.hpp  IBasePlayer.hpp  IBaseToggle.hpp
include/public/engine/: Common.hpp  IEdict.hpp  IEngine.hpp  IEntVars.hpp  IFuncs.hpp  IGlobals.hpp  ITraceResult.hpp
include/public/metamod/: IFuncs.hpp  IMetamod.hpp
include/rehlds/public/rehlds/: osconfig.h  rehlds_interfaces.h
include/sourcepawn/: sp_vm_api.h
modules/: meson.build
modules/example/: main.cpp  meson.build
msvc/: SPConfig.hpp  SPMod.sln  SPMod.vcxproj  SPMod.vcxproj.filters
patches/: AMBuildScript.patch  AMBuilder_VM_fPIC.patch  AMBuilder_zlib_fPIC.patch  ambuild_patch.sh  configurepy.patch  gcc-nodbg-clang.patch  spvm_patch.sh
scripting/: messages_test.sp
scripting/include/: access.inc  clients.inc  clients_hooks.inc  commands.inc  cvars.inc  forwards.inc  hooks.inc  hooks_base.inc  menus.inc  messages.inc  natives.inc  spmod.inc  string.inc  timers.inc
scripts/: script.py  script.sp
scripts/include/: access.inc  clients.inc  commands.inc  cvars.inc  float.inc  forwards.inc  menus.inc  messages.inc  natives.inc  spmod.inc  string.inc  timers.inc
src/: AccessNatives.cpp  AccessSystem.cpp  AccessSystem.hpp  AnubisInit.cpp  AnubisInit.hpp  CMakeLists.txt  CmdNatives.cpp  CmdSystem.cpp  CmdSystem.hpp  CompilationUtils.hpp  CoreNatives.cpp  CvarSystem.cpp  CvarSystem.hpp  CvarsNatives.cpp  DLLHooks.cpp  DLLHooks.hpp  Edict.cpp  Edict.hpp  EngineFuncs.cpp  EngineFuncs.hpp  EngineHooks.cpp  EngineHooks.hpp  ExtensionSystem.cpp  ExtensionSystem.hpp  FloatNatives.cpp  ForwardSystem.cpp  ForwardSystem.hpp  ForwardsNatives.cpp  HookChains.hpp  Hooks.cpp  Hooks.hpp  LoggingSystem.cpp  LoggingSystem.hpp  MenuNatives.cpp  MenuSystem.cpp  MenuSystem.hpp  MessageNatives.cpp  MessageSystem.cpp  MessageSystem.hpp  MetaFuncs.cpp  (+47 more)
src/engine/: Edict.cpp  Edict.hpp  Engine.cpp  Engine.hpp  EntVars.cpp  EntVars.hpp  Funcs.cpp  Funcs.hpp  Globals.cpp  Globals.hpp  TraceResult.cpp  TraceResult.hpp
src/metamod/: Funcs.cpp  Funcs.hpp  Metamod.cpp  Metamod.hpp
src/valve/: BaseAnimating.hpp  BaseDelay.hpp  BaseEntity.cpp  BaseEntity.hpp  BaseMonster.hpp  BasePlayer.cpp  BasePlayer.hpp  BaseToggle.hpp
subprojects/: CMakeLists.txt
subprojects/example/: CMakeLists.txt  DummyPluginMngr.cpp  DummyPluginMngr.hpp  ext.cpp  ext.hpp  meson.build
subprojects/example/msvc/: Example.vcxproj  Example.vcxproj.filters
subprojects/lua/: AdapterInterface.cpp  AdapterInterface.hpp  CoreNatives.cpp  ExtMain.cpp  ExtMain.hpp  PluginMngr.cpp  PluginMngr.hpp  meson.build
subprojects/sourcepawn/: AccessNatives.cpp  AccessNatives.hpp  AdapterInterface.cpp  AdapterInterface.hpp  CMakeLists.txt  CmdNatives.cpp  CmdNatives.hpp  CoreNatives.cpp  CoreNatives.hpp  CvarsNatives.cpp  CvarsNatives.hpp  DebugListener.cpp  DebugListener.hpp  ExtMain.cpp  ExtMain.hpp  FloatNatives.cpp  FloatNatives.hpp  ForwardNatives.cpp  ForwardNatives.hpp  ForwardsNatives.cpp  HooksNatives.cpp  HooksNatives.hpp  Listeners.cpp  Listeners.hpp  MenuNatives.cpp  MenuNatives.hpp  MessageNatives.cpp  MessageNatives.hpp  ModuleInterface.cpp  ModuleInterface.hpp  NativeCallback.cpp  NativeCallback.hpp  PlayerNatives.cpp  PlayerNatives.hpp  PluginSystem.cpp  PluginSystem.hpp  PrintfImpl.cpp  PrintfImpl.hpp  SourcePawnAPI.cpp  SourcePawnAPI.hpp  (+12 more)
travis/: build.sh  package.sh  prepare.sh
