sourceFiles = files('CmdNatives.cpp',
                    'CoreNatives.cpp',
                    'CvarsNatives.cpp',
                    'DebugListener.cpp',
                    'ExtMain.cpp',
                    'FloatNatives.cpp',
                    'Listeners.cpp',
                    'MenuNatives.cpp',
                    'MessageNatives.cpp',
                    'ModuleInterface.cpp',
                    'PlayerNatives.cpp',
                    'PluginSystem.cpp',
                    'PrintfImpl.cpp',
                    'SourcePawnAPI.cpp',
                    'StringNatives.cpp',
                    'TimerNatives.cpp')

shared_library('sourcepawn', sourceFiles, include_directories : includeDirs)
